Компонент заголовка и Сайдбара директива отслеживания дропдауна юзера

--- a/src/app/sysytem/system.component.html
+++ b/src/app/sysytem/system.component.html
@@ -1,3 +1,9 @@
-<p>
-  Systen component!
-</p>
+<div class="main-wrapper">
+	<div class="app">
+		<app-header></app-header>
+		<app-sidebar></app-sidebar>
+		<!--CONTENT-->
+		<router-outlet></router-outlet>
+		<!--CONTENT-->
+	</div>
+</div>
