Страница записей. Полностью

--- a/src/app/sysytem/records-page/add-category/add-category.component.html
+++ b/src/app/sysytem/records-page/add-category/add-category.component.html
@@ -5,6 +5,10 @@
 		</div>
 	</div>
 	<div class="card-block">
+		<div 
+			class="alert alert-{{message.type}}"
+			*ngIf="message.text"
+		>{{message.text}}</div>
 		<form #frm="ngForm" (ngSubmit)="OnSubmit(frm)">
 			<div 
 				class="form-group"
