--- a/src/app/sysytem/records-page/add-event/add-event.component.html
+++ b/src/app/sysytem/records-page/add-event/add-event.component.html
@@ -5,36 +5,92 @@
 		</div>
 	</div>
 	<div class="card-block">
-		<form>
+		<div 
+			class="alert alert-{{message.type}}"
+			*ngIf="message.text"
+		>{{ message.text }}</div>
+		<form #frm="ngForm" (ngSubmit)="OnSubmit(frm)">
 			<div class="form-group">
 				<label class="control-label" for="category">Выберите категорию</label>
-				<select class="form-control" id="category">
-					<option>Option one</option>
-					<option>Option two</option>
-					<option>Option three</option>
-					<option>Option four</option>
+				<select 
+					class="form-control" 
+					id="category"
+					name="category"
+					#category="ngModel"
+					[(ngModel)]="currCat"
+				>
+					<option value="0">Выберите значение</option>
+					<option 
+						*ngFor="let cat of categoryList"
+						[value]="cat.id"
+					>{{ cat.name }}</option>
 				</select>
 			</div>
 			<div class="form-group">
 				<label class="control-label">Выберите тип</label>
-				<div>
+				<div
+					*ngFor="let t of types"
+				>
 					<label>
-						<input class="radio" name="radios" type="radio">
-						<span>Доход</span>
-					</label>
-				</div>
-				<div>
-					<label>
-						<input class="radio" name="radios" type="radio" checked>
-						<span>Расход</span>
+						<input 
+							class="radio" 
+							name="type" 
+							type="radio" 
+							[value]="t.val"
+							required
+							[ngModel]="'outcome'"
+						>
+						<span>{{t.name}}</span>
 					</label>
 				</div>
 			</div>
-			<div class="form-group">
+			<div 
+				class="form-group"
+				[ngClass]="{'has-error': amount.touched && amount.invalid || +currAmount < 1}"
+			>
 				<label class="control-label" for="amount">Введите сумму</label>
-				<input type="number" value="0" id="amount" class="form-control">
+				<input 
+					type="number" 
+					id="amount" 
+					name="amount"
+					#amount="ngModel"
+					required
+					class="form-control"
+					[(ngModel)]="currAmount"
+				>
+				<span 
+					class="form-help-text"
+					*ngIf="amount.touched && amount.invalid"
+				>Поле не может быть пустым</span>
+				<span 
+					class="form-help-text"
+					*ngIf="currAmount < 0"
+				>Поле не может быть отрицательным</span>
 			</div>
-			<button type="submit" class="btn btn-primary">Добавить</button>
+			<div 
+				class="form-group"
+				[ngClass]="{'has-error': description.touched && description.invalid}"
+			>
+				<label class="control-label" for="description">Введите описание</label>
+				<input 
+					type="text" 
+					id="description" 
+					name="description"
+					#description
+					required
+					class="form-control"
+					[(ngModel)]="currDescription"
+				>
+				<span 
+					class="form-help-text"
+					*ngIf="description.touched && description.invalid"
+				>Поле не может быть пустым</span>
+			</div>
+			<button 
+				type="submit" 
+				class="btn btn-primary"
+				[disabled]="frm.invalid || currCat + '' === '0' || +currAmount < 1 || currDescription.trim() === ''"
+			>Добавить</button>
 		</form>
 	</div>
 </div>
