Фильтр страницы истории. Пайп фильтрации событий

--- a/src/app/sysytem/shared/components/header/header.component.html
+++ b/src/app/sysytem/shared/components/header/header.component.html
@@ -5,7 +5,7 @@
 	</div>
 	<div class="header-block header-block-nav">
 		<ul class="nav-profile">
-			<li class="profile dropdown" loginDropdown>
+			<li class="profile dropdown" appDropdown>
 				<a class="nav-link dropdown-toggle" role="button">
 					<span class="name">
 						Здравствуйте, {{ currUser.name }}
