--- a/src/app/sysytem/history-page/history-event/history-event.component.html
+++ b/src/app/sysytem/history-page/history-event/history-event.component.html
@@ -7,21 +7,24 @@
 						<h3 class="title">Список событий</h3>
 					</div>
 					<div class="form-inline pull-right m-r-2">
-						<div class="form-group">
-							<input type="email" class="form-control" placeholder="Поиск...">
-						</div>
-						<div class="btn-group">
-							<button type="button" class="btn btn-secondary dropdown-toggle ">
-								Параметр
+						<strong>Фильтр</strong>
+						<div class="btn-group" appDropdown>
+							<button type="button" class="btn btn-secondary">
+								Параметр: {{currPalceholder}}
 							</button>
 							<div class="dropdown-menu">
-								<a class="dropdown-item" href="#">Action</a>
-								<a class="dropdown-item" href="#">Another action</a>
-								<a class="dropdown-item" href="#">Something else here</a>
-								<div class="dropdown-divider"></div>
-								<a class="dropdown-item" href="#">Separated link</a>
+								<a class="dropdown-item" (click)="FilterItems('amount')">Сумма</a>
+								<a class="dropdown-item" (click)="FilterItems('date')">Дата</a>
+								<a class="dropdown-item" (click)="FilterItems('category')">Категория</a>
+								<a class="dropdown-item" (click)="FilterItems('type')">Тип</a>
 							</div>
 						</div>
+						<div class="form-group">
+							<input type="text" 
+							class="form-control" 
+							[placeholder]="currPalceholder"
+							[(ngModel)]="filterStr"
+						></div>
 					</div>
 				</div>
 				<div class="card-block">
@@ -37,7 +40,7 @@
 						</tr>
 						</thead>
 						<tbody>
-						<tr *ngFor="let e of events; let ind = index">
+						<tr *ngFor="let e of events | filterEvents:3:filterStr:filterField; let ind = index">
 							<th scope="row">{{ ind + 1 }}</th>
 							<td>{{ e.amount }}</td>
 							<td>{{ e.date | momentdate }}</td>
