--- a/src/app/sysytem/history-page/history-chart/history-chart.component.html
+++ b/src/app/sysytem/history-page/history-chart/history-chart.component.html
@@ -4,7 +4,7 @@
 			<ngx-charts-pie-chart
 				[view]="[545, 355]"
 				[results]="data"
-				[legend]="true"
+				[legend]="false"
 				[explodeSlices]="false"
 				[labels]="true"
 				[doughnut]="true"
