--- a/src/app/sysytem/history-page/history-page.component.html
+++ b/src/app/sysytem/history-page/history-page.component.html
@@ -1,17 +1,21 @@
-<article class="content">
-	<div class="title-block">
-		<h3 class="title">
-			Страница истории <span class="sparkline bar"></span>
-		</h3>
+<div class="title-block">
+	<h3 class="title">
+		Страница истории <span class="sparkline bar"></span>
+	</h3>
+	<div class="pull-right">
+		<button class="btn-sm btn btn-primary-outline" (click)="OpenFilter()">
+		<i class="fa fa-filter"></i>
+		</button>
 	</div>
-	<div *ngIf="!isLoaded">Loading...</div>
-	<div *ngIf="isLoaded">
-		<app-history-chart [data]="chartData"></app-history-chart>
-
-		<app-history-event 
-			[events]="events" 
-			[categories]="categories"
-		></app-history-event>
-		<app-history-filter></app-history-filter>
-	</div>
-</article>
+</div>
+<div *ngIf="!isLoaded">Loading...</div>
+<div *ngIf="isLoaded">
+	<app-history-chart [data]="chartData"></app-history-chart>
+	<app-history-event [events]="events" [categories]="categories"></app-history-event>
+	<app-history-filter 
+		[isVivible]="isFilterVisible"
+		[categories]="categories"
+		(onFilterApply)="OnFilterApply($event)"
+		(onFilterCancel)="OnFilterCancel()"
+	></app-history-filter>
+</div>
