--- a/src/app/sysytem/history-page/history-detail/history-detail.component.html
+++ b/src/app/sysytem/history-page/history-detail/history-detail.component.html
@@ -1,3 +1,32 @@
-<p>
-  history-detail works!
-</p>
+<div *ngIf="!isLoaded">Loading...</div>
+
+<div *ngIf="isLoaded">
+	<div class="title-block">
+		<h3 class="title">
+			<a [routerLink]="['/system/history']"><i class="fa fa-arrow-left"></i></a>
+			Страница записи № {{ event.id }}
+			<span class="sparkline bar"></span>
+		</h3>
+	</div>
+	<section class="section">
+		<div class="row">
+			<div class="col-xs-6 col-xs-offset-3">
+				<div class="card" [ngClass]="CardStyle()"> 
+					<div class="card-header">
+						<div class="header-block">
+							<p class="title">{{ GetTypeStr() }}</p>
+						</div>
+					</div>
+					<div class="card-block">
+						<ul>
+							<li>Сумма: <strong>{{ event.amount | number:'1.2'}}</strong></li>
+							<li>Категория: <strong>{{ category.name }}</strong></li>
+							<li>Описание: <strong>{{ event.description }}</strong></li>
+						</ul>
+					</div>
+					<div class="card-footer">{{ event.date | momentdate }}</div>
+				</div>
+			</div>
+		</div>
+	</section>
+</div>
