--- a/src/app/sysytem/history-page/history-event/history-event.component.html
+++ b/src/app/sysytem/history-page/history-event/history-event.component.html
@@ -7,7 +7,7 @@
 						<h3 class="title">Список событий</h3>
 					</div>
 					<div class="form-inline pull-right m-r-2">
-						<strong>Фильтр</strong>
+						<strong>Поиск</strong>
 						<div class="btn-group" appDropdown>
 							<button type="button" class="btn btn-secondary">
 								Параметр: {{currPalceholder}}
