--- a/src/app/sysytem/history-page/history-filter/history-filter.component.html
+++ b/src/app/sysytem/history-page/history-filter/history-filter.component.html
@@ -1,50 +1,54 @@
 <!--MODAL-->
-<div class="modal fade">
-<div class="modal-dialog">
-	<div class="modal-content">
-	<div class="modal-header">
-		<button type="button" class="close">
-		<span>×</span>
-		</button>
-		<h4 class="modal-title">Фильтр</h4>
+<div class="modal show" [ngStyle]="{'display': isVivible ? 'block': 'none' }">
+	<div class="modal-dialog">
+		<div class="modal-content">
+			<div class="modal-header">
+				<button type="button" class="close" (click)="CloseFilter()">
+				<span>×</span>
+				</button>
+				<h4 class="modal-title">Фильтр</h4>
+			</div>
+			<div class="modal-body">
+				<div class="form-group">
+					<label class="control-label" for="period">Выберите период</label>
+					<select class="form-control" id="period" [(ngModel)]="selectPeriod">
+						<option *ngFor="let p of timePeriods" [value]="p.type">{{ p.label }}</option>
+					</select>
+				</div>
+				<div class="form-group">
+					<label class="control-label">Выберите тип события</label>
+					<div>
+						<label  *ngFor="let t of eventTypes">
+						<input
+							class="checkbox"
+							type="checkbox"
+							[value]="t.value"
+							(change)="ChangeType($event.target)"
+						>
+							<span>{{ t.label }}</span>
+						</label>
+					</div>
+				</div>
+				<div class="form-group">
+					<label class="control-label">Выберите категории</label>
+					<div>
+						<label *ngFor="let c of categories">
+						<input
+							class="checkbox"
+							type="checkbox"
+							[value]="c.id"
+							(change)="ChangeCategory($event.target)"
+						>
+						<span>{{ c.name }}</span>
+						</label>
+					</div>
+				</div>
+				<div class="modal-footer">
+				<button type="button" class="btn btn-secondary" (click)="CloseFilter()">Отмена</button>
+				<button type="button" class="btn btn-primary" (click)="ApplyFilter()">Применить</button>
+				</div>
+			</div>
+		</div>
 	</div>
-	<div class="modal-body">
-		<div class="form-group">
-		<label class="control-label" for="period">Выберите период</label>
-		<select class="form-control" id="period">
-			<option>тип</option>
-		</select>
-		</div>
-		<div class="form-group">
-		<label class="control-label">Выберите тип события</label>
-		<div>
-			<label>
-			<input
-				class="checkbox"
-				type="checkbox"
-			>
-			<span>еуче</span>
-			</label>
-		</div>
-		</div>
-		<div class="form-group">
-		<label class="control-label">Выберите категории</label>
-		<div>
-			<label>
-			<input
-				class="checkbox"
-				type="checkbox"
-			>
-			<span>еуче</span>
-			</label>
-		</div>
-		</div>
-		<div class="modal-footer">
-		<button type="button" class="btn btn-secondary">Отмена</button>
-		<button type="button" class="btn btn-primary">Применить</button>
-		</div>
-	</div>
-	</div>
-</div>
 </div>
 <!--MODAL-->
